make component base classes as partial, add laoding bar after form  submit, fix game history box overflow, remove unnecessery packages references

--- a/ChessApp.Web/Components/ChatWindow.razor.css
+++ b/ChessApp.Web/Components/ChatWindow.razor.css
@@ -7,7 +7,6 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    overflow: auto;
 }
 
 .message-container {
